# QuickColorManager

./: .gitignore  CMakeLists.txt  Helpers.h  Includes.h  QuickColorManager.cpp  QuickColorManager.h  QuickColorManager.sln  QuickColorManager.vcxproj  QuickColorManager.vcxproj.filters  README.md  log.txt
app/: App.cpp  App.h  ConsoleApp.cpp  ConsoleApp.h
config/: Messages.h  Vcp.h
exceptions/: Exceptions.h
helpers/: Helpers.h
include/: QuickColorManager.h
logger/: Logger.cpp  Logger.h
monitor/: Monitor.cpp  Monitor.h  MonitorGetter.cpp  MonitorGetter.h  MonitorInformationPair.cpp  MonitorTypes.h
settings/: Settings.cpp  SettingsManager.cpp  SettingsManager.h  SettingsTypes.h
src/: App.cpp  ConsoleApp.cpp  Logger.cpp  Monitor.cpp  MonitorGetter.cpp  QuickColorManager.cpp  SettingsManager.cpp  Tester.cpp
test/: Tester.cpp  Tester.h
